:lipstick: Styles improved

--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(message: String)
 
-@main("Play with Scala.js") {
+@main("Lights On") {
     <div class="container">
         <div class="fancy-bulb">
             <div class="left-streaks streaks"></div>
